<resources>
    <string name="app_name" translatable="false">FishPott</string>
    <string name="none" translatable="false"></string>
    <string name="english_language_option" translatable="false">English</string>
    <string name="chinese_language_option" translatable="false"> 中文</string>
    <string name="french_language_option" translatable="false">Français</string>
    <string-array name="fragment_signup_personalstage2_countries_codes_array">
        <item></item>
        <item>+44</item>
        <item>+1</item>
        <item>+93</item>
        <item>+355</item>
        <item>+213</item>
        <item>+1</item>
        <item>+376</item>
        <item>+244</item>
        <item>+1</item>
        <item>+672</item>
        <item>+1</item>
        <item>+54</item>
        <item>+374</item>
        <item>+297</item>
        <item>+61</item>
        <item>+43</item>
        <item>+994</item>
        <item>+1</item>
        <item>+880</item>
        <item>+1</item>
        <item>+375</item>
        <item>+32</item>
        <item>+501</item>
        <item>+229</item>
        <item>+1</item>
        <item>+975</item>
        <item>+591</item>
        <item>+387</item>
        <item>+267</item>
        <item>+55</item>
        <item>+55</item>
        <item>+246</item>
        <item>+1</item>
        <item>+673</item>
        <item>+359</item>
        <item>+226</item>
        <item>+257</item>
        <item>+855</item>
        <item>+237</item>
        <item>+1</item>
        <item>+238</item>
        <item>+1345</item>
        <item>+236</item>
        <item>+235</item>
        <item>+56</item>
        <item>+86</item>
        <item>+61</item>
        <item>+61</item>
        <item>+57</item>
        <item>+269</item>
        <item>+242</item>
        <item>+682</item>
        <item>+506</item>
        <item>+225</item>
        <item>+385</item>
        <item>+53</item>
        <item>+357</item>
        <item>+420</item>
        <item>+243</item>
        <item>+45</item>
        <item>+253</item>
        <item>1+</item>
        <item>+1</item>
        <item>+670</item>
        <item>+593</item>
        <item>+20</item>
        <item>+503</item>
        <item>+240</item>
        <item>+291</item>
        <item>+372</item>
        <item>+251</item>
        <item>+298</item>
        <item>+500</item>
        <item>+679</item>
        <item>+358</item>
        <item>+389</item>
        <item>+33</item>
        <item>+594</item>
        <item>+689</item>
        <item>+262</item>
        <item>+241</item>
        <item>+995</item>
        <item>+49</item>
        <item>+233</item>
        <item>+350</item>
        <item>+30</item>
        <item>+299</item>
        <item>+1473</item>
        <item>+590</item>
        <item>+1671</item>
        <item>+502</item>
        <item>+224</item>
        <item>+245</item>
        <item>+592</item>
        <item>+509</item>
        <item>+0</item>
        <item>+504</item>
        <item>+852</item>
        <item>+36</item>
        <item>+354</item>
        <item>+91</item>
        <item>+62</item>
        <item>+98</item>
        <item>+964</item>
        <item>+353</item>
        <item>+972</item>
        <item>+39</item>
        <item>+1</item>
        <item>+81</item>
        <item>+962</item>
        <item>+7</item>
        <item>+254</item>
        <item>+686</item>
        <item>+965</item>
        <item>+996</item>
        <item>+856</item>
        <item>+371</item>
        <item>+961</item>
        <item>+266</item>
        <item>+231</item>
        <item>+218</item>
        <item>+423</item>
        <item>+370</item>
        <item>+352</item>
        <item>+853</item>
        <item>+261</item>
        <item>+265</item>
        <item>+60</item>
        <item>+960</item>
        <item>+223</item>
        <item>+356</item>
        <item>+692</item>
        <item>+596</item>
        <item>+222</item>
        <item>+230</item>
        <item>+262</item>
        <item>+52</item>
        <item>+691</item>
        <item>+373</item>
        <item>+377</item>
        <item>+976</item>
        <item>+382</item>
        <item>+1664</item>
        <item>+212</item>
        <item>+258</item>
        <item>+95</item>
        <item>+264</item>
        <item>+674</item>
        <item>+977</item>
        <item>+31</item>
        <item>+599</item>
        <item>+687</item>
        <item>+64</item>
        <item>+505</item>
        <item>+227</item>
        <item>+234</item>
        <item>+683</item>
        <item>+672</item>
        <item>+850</item>
        <item>+1670</item>
        <item>+47</item>
        <item>+968</item>
        <item>+92</item>
        <item>+680</item>
        <item>+507</item>
        <item>+675</item>
        <item>+595</item>
        <item>+51</item>
        <item>+63</item>
        <item>+64</item>
        <item>+48</item>
        <item>+351</item>
        <item>+1787</item>
        <item>+974</item>
        <item>+262</item>
        <item>+40</item>
        <item>+7</item>
        <item>+250</item>
        <item>+239</item>
        <item>+290</item>
        <item>+1869</item>
        <item>+1758</item>
        <item>+508</item>
        <item>+1784</item>
        <item>+685</item>
        <item>+378</item>
        <item>+966</item>
        <item>+221</item>
        <item>+381</item>
        <item>+248</item>
        <item>+232</item>
        <item>+65</item>
        <item>+421</item>
        <item>+386</item>
        <item>+677</item>
        <item>+252</item>
        <item>+27</item>
        <item>+500</item>
        <item>+82</item>
        <item>+211</item>
        <item>+34</item>
        <item>+94</item>
        <item>+249</item>
        <item>+597</item>
        <item>+47</item>
        <item>+268</item>
        <item>+46</item>
        <item>+41</item>
        <item>+963</item>
        <item>+886</item>
        <item>+992</item>
        <item>+255</item>
        <item>+66</item>
        <item>+1</item>
        <item>+220</item>
        <item>+228</item>
        <item>+690</item>
        <item>+676</item>
        <item>+1868</item>
        <item>+216</item>
        <item>+90</item>
        <item>+993</item>
        <item>+1649</item>
        <item>+688</item>
        <item>+1340</item>
        <item>+256</item>
        <item>+380</item>
        <item>+971</item>
        <item>+1</item>
        <item>+598</item>
        <item>+998</item>
        <item>+678</item>
        <item>+379</item>
        <item>+58</item>
        <item>+84</item>
        <item>+681</item>
        <item>+212</item>
        <item>+967</item>
        <item>+38</item>
        <item>+260</item>
        <item>+263</item>
    </string-array>
    <string name="start_activity_start">Start</string>
    <string name="update_activity_update_for_a_better_fishpott">Update For A Better FishPott</string>
    <string name="update_activity_an_update_is_available_with_new_features_better_performance_bug_fixes_and_more">An update is available with new features, better performance, bug fixes and more.</string>
    <string name="update_activity_update">Update</string>
    <string name="update_activity_not_now">Not Now</string>
    <string name="slider_activity_back">Back</string>
    <string name="slider_activity_next">Next</string>
    <string name="slider_activity_finish">Finish</string>
    <string name="slider_activity_buy_and_sell_shares_from_around_the_world_build_a_portfolio_that_pays_you_returns">Buy and sell shares from around the world. The shares you buy increase in value to build your net worth. So build a portfolio that pays you returns in your FishPott</string>
    <string name="slider_activity_go_global_with_your_e_commerce_put_up_items_for_sale_on_your_fishpott_and_sell_them_globally_without_worrying_about_delivery">Go global with your the items you sell. Put up items for sale on your FishPott and sell them globally without worrying about delivery</string>
    <string name="slider_activity_yard_sale">Yard Sale!</string>
    <string name="slider_activity_fundraiser">Fundraiser!</string>
    <string name="slider_activity_raise_funds_from_around_the_world_for_a_worthy_course_host_your_fundraisers_on_your_fishpott_so_people_all_over_the_world_can_contribute">Raise funds from around the world for a worthy course. Host your fundraisers on your FishPott so people all over the world can contribute</string>
    <string name="slider_activity_shares_on_sale">Shares-On-Sale!</string>
    <string name="slider_activity_find_out_whats_buzzing_let_the_world_feel_your_influence_by_posting_what_s_going_on_with_you_and_get_likes_that_give_you_pearls_you_can_cash_out_oops_your_posts_can_be_disliked_too_and_that_s_gonna_cost_you_pearls_so_be_smart_pearls_can_be_poached_so_stay_on_line_or_buy_shields_to_protect_them">Find out whats buzzing. Let the world feel your influence by posting what’s going on with you and get likes that give you pearls you can cash out. Oops, your posts can be disliked too, and that’s gonna cost you pearls so be smart. Pearls can be poached, so stay on-line or buy shields to protect them</string>
    <string name="slider_activity_news">News!</string>
    <string name="slider_activity_events">Events!</string>
    <string name="login_activity_i_agree">Agree</string>
    <string name="sample_quantity_100005">$100000</string>
    <string name="quantity">Quantity</string>
    <string name="samplepottname_raylight">raylight</string>
    <string name="notification_date">Jun 2 at 1pm</string>
    <string name="amount">Amount</string>
    <string name="status">Status</string>
    <string name="processed">PROCESSED</string>
    <string name="shares">Shares</string>
    <string name="shares_purchase">SHARES PURCHASE</string>
    <string name="total_cost">Total Cost</string>
    <string name="fishpot_treasury_bill">FishPot Treasury Bill</string>
    <string name="seller_pott_name">Seller Pott Name</string>
    <string name="it_is_important_that_you_know_what_information_fishpott_collects_and_how_you_can_control_it_we_explain_it_in_detail_in_our_privcy_policy">It is important that you know what information FishPott collects.</string>
    <string name="read_privacy_policy">Read Privacy policy.</string>
    <string name="read_terms_of_service">Read Terms of service.</string>
    <string name="why_does_fishpott_use_your_data">Why does FishPott use your data?</string>
    <string name="your_fishpott_information_content">Your FishPott content</string>
    <string name="contacts_in_address_book">Contacts in address book</string>
    <string name="by_using_using_fishpott_you_are_bound_by_the_terms_of_the_service">By using FishPott, you are bound by the terms of the service and privacy policy.</string>
    <string name="this_includes_news_you_post_stocks_you_buy_and_what_you_provide_when_signing_up">This includes news you post, stocks you buy and what you provide when signing up.</string>
    <string name="to_give_you_a_customized_fishpott_experience_the_news_stocks_and_co_investor_suggestions_and_messages_you_see_are_all_tailored_to_you_based_on_the_data_we_collect">To give you a customized FishPott experience.</string>
    <string name="we_use_this_to_find_messages_other_users_send_you_we_also_use_it_to_find_other_users_on_fishpott_you_may_know_to_help_you_connect_with_them_by_suggesting_them_to_you_or_you_to_them_we_do_this_periodically">FishPott will ask for your permission before we access this data. The FishPott App periodically uses this data to deliver messages from users and suggest users you may know to you to connect with.</string>
    <string name="deny">Deny</string>
    <string name="we_do_not_share_your_data_with_anyone">WE DO NOT SHARE YOUR DATA</string>
</resources>