<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/rounded_corners_shareforsale_horizontal_item_background"
    android:elevation="2dp">


    <com.fishpott.fishpott5.Views.CircleImageView
        android:id="@+id/type_label_imageview"
        android:layout_width="18dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/none"
        android:src="@drawable/arrow_right"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/type_textview"
        app:layout_constraintEnd_toStartOf="@+id/type_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/type_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/shares_purchase"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/transaction_item"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/amount_textview"
        app:layout_constraintStart_toEndOf="@+id/type_label_imageview"
        app:layout_constraintTop_toTopOf="parent" />

    <com.fishpott.fishpott5.Views.CircleImageView
        android:id="@+id/dateicon_label_imageview"
        android:layout_width="18dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/none"
        android:src="@drawable/time_icon"
        app:civ_border_color="@android:color/transparent"
        app:civ_border_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/date_textview"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/type_textview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/notification_date"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/transaction_label"
        app:layout_constraintBottom_toBottomOf="@+id/dateicon_label_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dateicon_label_imageview"
        app:layout_constraintTop_toTopOf="@+id/dateicon_label_imageview"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/amount_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/amount"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/transaction_item"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/status_textview"
        app:layout_constraintStart_toEndOf="@+id/total_cost_textView"
        app:layout_constraintTop_toBottomOf="@+id/dateicon_label_imageview" />

    <TextView
        android:id="@+id/amount_label_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/quantity"
        android:textColor="@color/colorAccentAsh"
        android:textSize="@dimen/transaction_label"
        app:layout_constraintEnd_toEndOf="@+id/total_cost_textView"
        app:layout_constraintStart_toStartOf="@+id/total_cost_textView"
        app:layout_constraintTop_toBottomOf="@+id/total_cost_textView" />


    <TextView
        android:id="@+id/total_cost_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sample_quantity_100005"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/transaction_item"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/amount_label_textView"
        app:layout_constraintEnd_toStartOf="@+id/amount_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateicon_label_imageview"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/total_cost_label_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/total_cost"
        android:textColor="@color/colorAccentAsh"
        android:textSize="@dimen/transaction_label"
        app:layout_constraintEnd_toEndOf="@+id/amount_textview"
        app:layout_constraintStart_toStartOf="@+id/amount_textview"
        app:layout_constraintTop_toBottomOf="@+id/amount_textview" />


    <TextView
        android:id="@+id/status_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/processed"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/transaction_item"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/amount_textview"
        app:layout_constraintTop_toBottomOf="@+id/dateicon_label_imageview" />

    <TextView
        android:id="@+id/status_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/status"
        android:textColor="@color/colorAccentAsh"
        android:textSize="@dimen/transaction_label"
        app:layout_constraintEnd_toEndOf="@+id/status_textview"
        app:layout_constraintStart_toStartOf="@+id/status_textview"
        app:layout_constraintTop_toBottomOf="@+id/status_textview" />

    <TextView
        android:id="@+id/momo_type_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fishpot_treasury_bill"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/transaction_item"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/info2_type_textview"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_label_textView" />

    <TextView
        android:id="@+id/type_label_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:text="@string/shares"
        android:textColor="@color/colorAccentAsh"
        android:textSize="@dimen/transaction_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/momo_type_textview"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/momo_type_textview"
        app:layout_constraintTop_toBottomOf="@+id/momo_type_textview"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/info2_type_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/samplepottname_raylight"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/transaction_item"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/type_label_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/momo_type_textview"
        app:layout_constraintTop_toBottomOf="@id/amount_label_textView"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/info2_type_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:text="@string/seller_pott_name"
        android:textColor="@color/colorAccentAsh"
        android:textSize="@dimen/transaction_label"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/info2_type_textview"
        app:layout_constraintStart_toStartOf="@+id/info2_type_textview"
        app:layout_constraintTop_toBottomOf="@+id/momo_type_textview" />

 </androidx.constraintlayout.widget.ConstraintLayout>
