<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/intro_pp_dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/it_is_important_that_you_know_what_information_fishpott_collects_and_how_you_can_control_it_we_explain_it_in_detail_in_our_privcy_policy"
                android:textColor="@color/colorSignupFragmentIntroText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/sharing_disclosure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/we_do_not_share_your_data_with_anyone"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/intro_pp_dialog" />


            <TextView
                android:id="@+id/url_pp_dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/read_privacy_policy"
                android:textColor="@color/colorDateText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sharing_disclosure" />

            <TextView
                android:id="@+id/url_tc_dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/read_terms_of_service"
                android:textColor="@color/colorDateText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/url_pp_dialog" />

            <TextView
                android:id="@+id/title_why_collection_pp_dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/why_does_fishpott_use_your_data"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/url_tc_dialog" />


            <TextView
                android:id="@+id/body_title_why_collection_pp_dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/to_give_you_a_customized_fishpott_experience_the_news_stocks_and_co_investor_suggestions_and_messages_you_see_are_all_tailored_to_you_based_on_the_data_we_collect"
                android:textColor="@color/colorSignupFragmentIntroText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_why_collection_pp_dialog" />

            <TextView
                android:id="@+id/title_info1_collected_pp_dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/your_fishpott_information_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/body_title_why_collection_pp_dialog" />

            <TextView
                android:id="@+id/body_info1_collected_pp_dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/this_includes_news_you_post_stocks_you_buy_and_what_you_provide_when_signing_up"
                android:textColor="@color/colorSignupFragmentIntroText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_info1_collected_pp_dialog" />

            <TextView
                android:id="@+id/title_info2_collected_pp_dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/contacts_in_address_book"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/body_info1_collected_pp_dialog" />


            <TextView
                android:id="@+id/body_info2_collected_pp_dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/we_use_this_to_find_messages_other_users_send_you_we_also_use_it_to_find_other_users_on_fishpott_you_may_know_to_help_you_connect_with_them_by_suggesting_them_to_you_or_you_to_them_we_do_this_periodically"
                android:textColor="@color/colorSignupFragmentIntroText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_info2_collected_pp_dialog" />

            <TextView
                android:id="@+id/final_warning_pp_dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/by_using_using_fishpott_you_are_bound_by_the_terms_of_the_service"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/body_info2_collected_pp_dialog" />

            <Button
                android:id="@+id/deny_button_pp_dialog"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_activity_dialog_text2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                android:background="@drawable/button_white_background_pressed_gray"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/deny"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/agree_button_pp_dialog"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/final_warning_pp_dialog" />


            <Button
                android:id="@+id/agree_button_pp_dialog"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_activity_dialog_text2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                android:background="@drawable/start_a_fishpott_acc_button_background"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/login_activity_i_agree"
                android:textColor="@drawable/black_button_pressed_white_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/deny_button_pp_dialog"
                app:layout_constraintTop_toBottomOf="@+id/final_warning_pp_dialog" />


            <android.support.constraint.Guideline
                android:id="@+id/login_activity_dialog_guideline_h_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.61" />

            <android.support.constraint.Guideline
                android:id="@+id/login_activity_dialog_guideline_h_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.6" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</RelativeLayout>
